Fixing section stretching on Add Blocks UI

--- a/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
+++ b/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
@@ -1220,7 +1220,7 @@ body.bgtfw-edit-links-hidden .bgtfw-edit-link a {
   min-height: 15px;
 }
 
-.entry-content .boldgrid-section {
+.entry-content:not(.mce-content-body) .boldgrid-section {
   margin-left: -2.8rem;
   margin-right: -2.8rem;
 }
